--- a/DoorofSoul.Protocol.Communication/DoorofSoul.Protocol.Communication.csproj
+++ b/DoorofSoul.Protocol.Communication/DoorofSoul.Protocol.Communication.csproj
@@ -77,6 +77,7 @@
     <Compile Include="FetchDataResponseParameters\Player\FetchWorldsResponseParameterCode.cs" />
     <Compile Include="FetchDataResponseParameters\Player\FetchSceneResponseParameterCode.cs" />
     <Compile Include="FetchDataResponseParameters\Player\FetchSystemVersionResponseParameterCode.cs" />
+    <Compile Include="FetchDataResponseParameters\Scene\FetchContainersResponseParameterCode.cs" />
     <Compile Include="FetchDataResponseParameters\Scene\FetchEntitiesResponseParameterCode.cs" />
     <Compile Include="FetchDataResponseParameters\Scene\FetchItemEntitiesResponseParameterCode.cs" />
     <Compile Include="FetchDataResponseParameters\Soul\FetchSkillInfosResponseParameterCode.cs" />
