Scene Inform consistency fixed
move BroadcastMessage,EntityEnter/Exit SynchronizeEntityPosition from
SceneEvent to SceneEvent/InformData

--- a/DoorofSoul.Library.General/DoorofSoul.Library.General.csproj
+++ b/DoorofSoul.Library.General/DoorofSoul.Library.General.csproj
@@ -113,14 +113,14 @@
     <Compile Include="LightComponents\Communications\Events\Handlers\Player\InformDataHandler.cs" />
     <Compile Include="LightComponents\Communications\Events\Handlers\Player\InformDataResolver.cs" />
     <Compile Include="LightComponents\Communications\Events\Handlers\SceneEventHandler.cs" />
-    <Compile Include="LightComponents\Communications\Events\Handlers\Scene\BroadcastMessageHandler.cs" />
+    <Compile Include="LightComponents\Communications\Events\Handlers\Scene\InformData\InformBroadcastMessageHandler.cs" />
     <Compile Include="LightComponents\Communications\Events\Handlers\Scene\ContainerEventResolver.cs" />
     <Compile Include="LightComponents\Communications\Events\Handlers\Scene\EntityEventResolver.cs" />
     <Compile Include="LightComponents\Communications\Events\Handlers\Scene\InformDataHandler.cs" />
     <Compile Include="LightComponents\Communications\Events\Handlers\Scene\InformDataResolver.cs" />
-    <Compile Include="LightComponents\Communications\Events\Handlers\Scene\EntityEnterHandler.cs" />
-    <Compile Include="LightComponents\Communications\Events\Handlers\Scene\EntityExitHandler.cs" />
-    <Compile Include="LightComponents\Communications\Events\Handlers\Scene\SynchronizeEntityPositionHandler.cs" />
+    <Compile Include="LightComponents\Communications\Events\Handlers\Scene\InformData\InformEntityEnterHandler.cs" />
+    <Compile Include="LightComponents\Communications\Events\Handlers\Scene\InformData\InformEntityExitHandler.cs" />
+    <Compile Include="LightComponents\Communications\Events\Handlers\Scene\InformData\SynchronizeEntityPositionHandler.cs" />
     <Compile Include="LightComponents\Communications\Events\Handlers\SoulEventHandler.cs" />
     <Compile Include="LightComponents\Communications\Events\Handlers\Soul\InformDataHandler.cs" />
     <Compile Include="LightComponents\Communications\Events\Handlers\Soul\InformDataResolver.cs" />
