--- a/DoorofSoul.Library.General/DoorofSoul.Library.General.csproj
+++ b/DoorofSoul.Library.General/DoorofSoul.Library.General.csproj
@@ -48,6 +48,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LightComponents\Communications\Events\Handlers\Scene\InformData\InformContainerEnterHandler.cs" />
+    <Compile Include="LightComponents\Communications\Events\Handlers\Scene\InformData\InformContainerExitHandler.cs" />
     <Compile Include="LightComponents\Communications\Operations\Handlers\Container\UseItemHandler.cs" />
     <Compile Include="LightComponents\Communications\Operations\Handlers\Scene\FetchData\FetchContainersHandler.cs" />
     <Compile Include="LightComponents\Communications\Responses\Handlers\Scene\FetchData\FetchContainersResponseHandler.cs" />
