--- a/DoorofSoul.Library.General/DoorofSoul.Library.General.csproj
+++ b/DoorofSoul.Library.General/DoorofSoul.Library.General.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="LightComponents\Communications\Events\Handlers\Scene\InformData\InformContainerEnterHandler.cs" />
     <Compile Include="LightComponents\Communications\Events\Handlers\Scene\InformData\InformContainerExitHandler.cs" />
+    <Compile Include="LightComponents\Communications\Events\Handlers\Scene\InformData\InformDestroyBulletHandler.cs" />
     <Compile Include="LightComponents\Communications\Events\Handlers\Scene\InformData\InformShootABulletHandler.cs" />
     <Compile Include="LightComponents\Communications\Operations\Handlers\Container\ShootABulletHandler.cs" />
     <Compile Include="LightComponents\Communications\Operations\Handlers\Container\UseItemHandler.cs" />
@@ -84,6 +85,9 @@
     <Compile Include="LightComponents\HexagramInterfaces\NatureInterface.cs" />
     <Compile Include="LightComponents\HexagramInterfaces\Nature\ContainerElementsInterface.cs" />
     <Compile Include="NatureComponents\ContainerElements\ContainerStatusEffectManager.cs" />
+    <Compile Include="NatureComponents\ContainerElements\ShooterAbilities.cs" />
+    <Compile Include="NatureComponents\SceneElements\Bullet.cs" />
+    <Compile Include="NatureComponents\SceneElements\BulletManager.cs" />
     <Compile Include="NatureComponents\SceneElements\ItemEntity.cs" />
     <Compile Include="NatureComponents\SceneElements\ItemEntityManager.cs" />
     <Compile Include="ShadowComponents\UIComponents\IUsableObject.cs" />
