--- a/DoorofSoul.Protocol.Communication/DoorofSoul.Protocol.Communication.csproj
+++ b/DoorofSoul.Protocol.Communication/DoorofSoul.Protocol.Communication.csproj
@@ -125,8 +125,8 @@
     <Compile Include="OperationParameters\Container\PickupItemEntityParameterCode.cs" />
     <Compile Include="OperationParameters\Container\SayParameterCode.cs" />
     <Compile Include="OperationParameters\Container\UseItemParameterCode.cs" />
-    <Compile Include="OperationParameters\Entity\MoveParameterCode.cs" />
-    <Compile Include="OperationParameters\Entity\RotateParameterCode.cs" />
+    <Compile Include="OperationParameters\Container\MoveParameterCode.cs" />
+    <Compile Include="OperationParameters\Container\RotateParameterCode.cs" />
     <Compile Include="OperationParameters\OperationParameterCode.cs" />
     <Compile Include="OperationParameters\Player\AnswerOperationParameterCode.cs" />
     <Compile Include="OperationParameters\Player\LoginParameterCode.cs" />
@@ -165,6 +165,7 @@
     <Folder Include="InformDataParameters\Entity\" />
     <Folder Include="InformDataParameters\Player\" />
     <Folder Include="InformDataParameters\World\" />
+    <Folder Include="OperationParameters\Entity\" />
     <Folder Include="ResponseParameters\Container\" />
     <Folder Include="ResponseParameters\Entity\" />
     <Folder Include="ResponseParameters\Soul\" />
