--- a/DoorofSoul.Protocol/DoorofSoul.Protocol.csproj
+++ b/DoorofSoul.Protocol/DoorofSoul.Protocol.csproj
@@ -47,6 +47,7 @@
     <Compile Include="MessageTypeCode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerializationClassTypeCode.cs" />
+    <Compile Include="ShooterAbilitiesTypeCode.cs" />
     <Compile Include="SkillIDCode.cs" />
     <Compile Include="SkillMediaTypeCode.cs" />
     <Compile Include="SkillPitch.cs" />
