--- a/DoorofSoul.Library.General/DoorofSoul.Library.General.csproj
+++ b/DoorofSoul.Library.General/DoorofSoul.Library.General.csproj
@@ -54,8 +54,10 @@
     <Compile Include="LightComponents\Communications\Events\Handlers\Container\InformData\InformTransparancyChangeHandler.cs" />
     <Compile Include="LightComponents\Communications\Events\Handlers\Scene\InformData\InformContainerEnterHandler.cs" />
     <Compile Include="LightComponents\Communications\Events\Handlers\Scene\InformData\InformContainerExitHandler.cs" />
+    <Compile Include="LightComponents\Communications\Events\Handlers\Scene\InformData\InformContainerLifePointChangeHandler.cs" />
     <Compile Include="LightComponents\Communications\Events\Handlers\Scene\InformData\InformDestroyBulletHandler.cs" />
     <Compile Include="LightComponents\Communications\Events\Handlers\Scene\InformData\InformShootABulletHandler.cs" />
+    <Compile Include="LightComponents\Communications\Events\Handlers\Scene\InformData\SynchronizeEntityRotationHandler.cs" />
     <Compile Include="LightComponents\Communications\Operations\Handlers\Container\ObserveBulletHitHandler.cs" />
     <Compile Include="LightComponents\Communications\Operations\Handlers\Container\ShootABulletHandler.cs" />
     <Compile Include="LightComponents\Communications\Operations\Handlers\Container\UseItemHandler.cs" />
@@ -116,7 +118,7 @@
     <Compile Include="LightComponents\Communications\Events\Handlers\Container\InformDataResolver.cs" />
     <Compile Include="LightComponents\Communications\Events\Handlers\Container\InformData\InformEnergyPointChangeHandler.cs" />
     <Compile Include="LightComponents\Communications\Events\Handlers\Container\InformData\InformLifePointChangeHandler.cs" />
-    <Compile Include="LightComponents\Communications\Events\Handlers\Container\ObserveSceneEntitiesPositionHandler.cs" />
+    <Compile Include="LightComponents\Communications\Events\Handlers\Container\ObserveSceneEntitiesTransformHandler.cs" />
     <Compile Include="LightComponents\Communications\Events\Handlers\EntityEventHandler.cs" />
     <Compile Include="LightComponents\Communications\Events\Handlers\Entity\InformDataHandler.cs" />
     <Compile Include="LightComponents\Communications\Events\Handlers\Entity\InformDataResolver.cs" />
@@ -173,7 +175,7 @@
     <Compile Include="LightComponents\Communications\Operations\Handlers\Container\FetchData\FetchEntityHandler.cs" />
     <Compile Include="LightComponents\Communications\Operations\Handlers\Container\FetchData\FetchInventoryHandler.cs" />
     <Compile Include="LightComponents\Communications\Operations\Handlers\Container\FetchData\FetchInventoryItemsHandler.cs" />
-    <Compile Include="LightComponents\Communications\Operations\Handlers\Container\ObserveEntityPositionHandler.cs" />
+    <Compile Include="LightComponents\Communications\Operations\Handlers\Container\ObserveEntityTransformHandler.cs" />
     <Compile Include="LightComponents\Communications\Operations\Handlers\Container\SayHandler.cs" />
     <Compile Include="LightComponents\Communications\Operations\Handlers\EntityOperationHandler.cs" />
     <Compile Include="LightComponents\Communications\Operations\Handlers\Entity\FetchDataHandler.cs" />
