--- a/DoorofSoul.Client/DoorofSoul.Client.CSharp.csproj
+++ b/DoorofSoul.Client/DoorofSoul.Client.CSharp.csproj
@@ -13,13 +13,11 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Full v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows64:19</UnityBuildTarget>
     <UnityVersion>5.4.0f3</UnityVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -129,10 +127,6 @@
     <Compile Include="Assets\Scripts\NatureScripts\SceneScripts\PlayerLoginSceneScripts\PlayerLoginController.cs" />
     <Compile Include="Assets\Scripts\NatureScripts\SceneScripts\PlayerLoginSceneScripts\PlayerLoginUI.cs" />
     <Compile Include="Assets\Scripts\NatureScripts\SceneScripts\PlayerLoginSceneScripts\PlayerRegisterUI.cs" />
-    <Compile Include="Assets\Scripts\NatureScripts\SceneScripts\TestSceneScripts\BulletController.cs" />
-    <Compile Include="Assets\Scripts\NatureScripts\SceneScripts\TestSceneScripts\RankingInfo.cs" />
-    <Compile Include="Assets\Scripts\NatureScripts\SceneScripts\TestSceneScripts\RankingPanel.cs" />
-    <Compile Include="Assets\Scripts\NatureScripts\SceneScripts\TestSceneScripts\ShootBulletController.cs" />
     <Compile Include="Assets\Scripts\ShadowScripts\UiScripts\DraggablePanel.cs" />
     <Compile Include="Assets\Scripts\ShadowScripts\UiScripts\EffectScripts\VolatileText.cs" />
     <Compile Include="Assets\Scripts\ShadowScripts\UiScripts\ErrorInformPanel.cs" />
